--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="first-part">
         <div class="width">
             <div class="content1">
-                <H1>Welcome To</H1>
-                <H1><SPAN class="orange-color">Peter Parker</SPAN> World</H1>
+                <h1>Welcome To</h1>
+                <h1><SPAN class="orange-color">Peter Parker</SPAN> World</h1>
                 <h2>Build Climber and Train Stopper</h2>
                 <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                     work.
@@ -38,8 +38,8 @@
         </div>
 
 
-    </section class="width">
-    <section>
+    </section>
+    <section class="second-part">
         <div class="width">
             <div class="content2">
                 <img src="my-bg2 (1).png" alt="">
@@ -52,12 +52,39 @@
                 <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                     how
                     to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-                <a href="#"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/koli-mira-43634520b/" class="link-button">DOWNLOAD
+                    RESUME</a>
             </div>
         </div>
 
 
     </section>
+    <section class="experience-part">
+
+        <h1>Experiences</h1>
+        <div class="width">
+            <div class="last-part" id="full-stack">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                    called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="last-part" id="baby-develop">
+                <h2>Baby Web Developer</h2>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <h4>© Peter Parker 2021, a Programming Hero initiative.</h4>
+    </footer>
 
 
 
